@@ -1,3 +1,8 @@
+2007-01-31  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-ui-properties.c: (main): don't leak the references to the glade
+	dialog and GnomeProgram
+
 2006-08-07  Rodrigo Moya <rodrigo@novell.com>
 
 	Fixes #348844
